regularization paths in both notebooks

--- a/rapport_Python.ipynb
+++ b/rapport_Python.ipynb
@@ -36,7 +36,7 @@
     "import seaborn as sns\n",
     "import os\n",
     "\n",
-    "from utils import save_fig\n",
+    "from utils import *\n",
     "\n",
     "%matplotlib inline\n",
     "sns.set(style=\"darkgrid\")\n",
@@ -1255,16 +1255,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from utils import plot_corr_circle, rainbowarrow\n",
-    "# arguments : données, object PCA, composante 1, composante 2"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
     "plot_corr_circle(X_new, pca, 1, 2)\n",
     "save_fig(\"pca_components_1_2\")\n",
     "plt.show()"
@@ -1363,9 +1353,9 @@
     "def plot_pca2(l_pca, fig, ax, nbc, nbc2, pca):\n",
     "    cmaps = plt.get_cmap(\"Set2\")\n",
     "    for i in range(4):\n",
-    "        xs = l_pca[spotify_data[\"pop.class\"] == chr(i+65), nbc - 1]\n",
-    "        ys = l_pca[spotify_data[\"pop.class\"] == chr(i+65), nbc2 - 1]\n",
-    "        label = label_class[chr(i+65)]\n",
+    "        xs = l_pca[spotify_data[\"pop.class\"] == chr(i + 65), nbc - 1]\n",
+    "        ys = l_pca[spotify_data[\"pop.class\"] == chr(i + 65), nbc2 - 1]\n",
+    "        label = label_class[chr(i + 65)]\n",
     "        color = cmaps(i)\n",
     "        ax.scatter(x=xs, y=ys, color=color, alpha=.5, s=1, label=label)\n",
     "        ax.set_xlabel(\"PC %d: %.2f%%\" %\n",
@@ -1634,9 +1624,6 @@
     "from sklearn.svm import SVC\n",
     "\n",
     "from sklearn.metrics import classification_report, accuracy_score, recall_score\n",
-    "\n",
-    "from utils import plot_cf_matrix\n",
-    "# arguments : observations, prédictions, dessiner un \"mosaic plot\"\n",
     "\n",
     "model_accuracy_score, recall_scores = [], []"
    ]
@@ -1965,7 +1952,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Voici une implémentation des chemins de régularisation pour les pénalités Lasso et Elastic Net :"
+    "Voici une implémentation des chemins de régularisation pour les pénalités `Lasso` et `Elastic Net` :"
    ]
   },
   {
@@ -1976,15 +1963,15 @@
    },
    "outputs": [],
    "source": [
+    "from sklearn.linear_model import lasso_path, enet_path\n",
     "from itertools import cycle\n",
     "from sklearn.linear_model import lasso_path, enet_path\n",
     "\n",
     "X_copy = X_train_scaled\n",
     "y_copy = y_train_class\n",
+    "pale = sns.color_palette(\"husl\", 13)\n",
     "\n",
-    "# Compute paths\n",
-    "\n",
-    "eps = 5e-3  # the smaller it is the longer is the path\n",
+    "eps = 5e-3 # plus c'est petit, plus long sera le chemin de régularisation\n",
     "\n",
     "# Lasso\n",
     "alphas_lasso, coefs_lasso, _ = lasso_path(X_copy, y_copy, eps=eps, fit_intercept=False)\n",
@@ -2001,46 +1988,55 @@
     "alphas_positive_enet, coefs_positive_enet, _ = enet_path(\n",
     "    X_copy, y_copy, eps=eps, l1_ratio=0.8, positive=True, fit_intercept=False)\n",
     "\n",
+    "\n",
     "plt.figure(1)\n",
-    "colors = cycle(['b', 'r', 'g', 'c', 'k'])\n",
     "neg_log_alphas_lasso = -np.log10(alphas_lasso)\n",
-    "neg_log_alphas_enet = -np.log10(alphas_enet)\n",
-    "for coef_l, coef_e, c in zip(coefs_lasso, coefs_enet, colors):\n",
-    "    l1 = plt.plot(neg_log_alphas_lasso, coef_l, c=c, lw=1)\n",
-    "    l2 = plt.plot(neg_log_alphas_enet, coef_e, linestyle='--', c=c, lw=1)\n",
+    "for coef_l, c, idx in zip(coefs_lasso, pale, range(13)):\n",
+    "    plt.plot(neg_log_alphas_lasso, coef_l, c=c, lw=1, label=features[idx])\n",
     "\n",
     "plt.xlabel(r'$-log(\\alpha$)')\n",
     "plt.ylabel('Coefficients')\n",
-    "# plt.title('Chemins Lasso et Elastic Net')\n",
-    "plt.legend((l1[-1], l2[-1]), ('Lasso', 'Elastic Net'), loc='best')\n",
+    "# plt.title('Chemin Lasso')\n",
+    "plt.legend(fontsize='x-small')\n",
     "plt.axis('tight')\n",
-    "save_fig('lasso_enet_paths_class')\n",
+    "save_fig('lasso_paths_class')\n",
     "\n",
     "\n",
     "plt.figure(2)\n",
+    "neg_log_alphas_enet = -np.log10(alphas_enet)\n",
+    "for coef_e, c, idx in zip(coefs_enet, pale, range(13)):\n",
+    "    plt.plot(neg_log_alphas_enet, coef_e, c=c, lw=1, label=features[idx])\n",
+    "    \n",
+    "plt.xlabel(r'$-log(\\alpha$)')\n",
+    "plt.ylabel('Coefficients')\n",
+    "# plt.title('Chemin Elastic Net')\n",
+    "plt.legend(fontsize='x-small')\n",
+    "plt.axis('tight')\n",
+    "save_fig('enet_paths_class')\n",
+    "\n",
+    "\n",
+    "plt.figure(3)\n",
     "neg_log_alphas_positive_lasso = -np.log10(alphas_positive_lasso)\n",
-    "for coef_l, coef_pl, c in zip(coefs_lasso, coefs_positive_lasso, colors):\n",
-    "    l1 = plt.plot(neg_log_alphas_lasso, coef_l, c=c, lw=1)\n",
-    "    l2 = plt.plot(neg_log_alphas_positive_lasso, coef_pl, linestyle='--', c=c, lw=1)\n",
+    "for coef_pl, c, idx in zip(coefs_positive_lasso, pale, range(13)):\n",
+    "    plt.plot(neg_log_alphas_positive_lasso, coef_pl, c=c, lw=1, label=features[idx])\n",
     "\n",
     "plt.xlabel(r'$-log(\\alpha$)')\n",
     "plt.ylabel('Coefficients')\n",
-    "# plt.title('Lasso et Lasso positive')\n",
-    "plt.legend((l1[-1], l2[-1]), ('Lasso', 'Lasso positive'), loc='best')\n",
+    "# plt.title('Lasso positive')\n",
+    "plt.legend(fontsize='x-small')\n",
     "plt.axis('tight')\n",
     "save_fig('lasso_paths_positive_class')\n",
     "\n",
     "\n",
-    "plt.figure(3)\n",
+    "plt.figure(4)\n",
     "neg_log_alphas_positive_enet = -np.log10(alphas_positive_enet)\n",
-    "for (coef_e, coef_pe, c) in zip(coefs_enet, coefs_positive_enet, colors):\n",
-    "    l1 = plt.plot(neg_log_alphas_enet, coef_e, c=c, lw=1)\n",
-    "    l2 = plt.plot(neg_log_alphas_positive_enet, coef_pe, linestyle='--', c=c, lw=1)\n",
+    "for coef_pe, c, idx in zip(coefs_positive_enet, pale, range(13)):\n",
+    "    plt.plot(neg_log_alphas_positive_enet, coef_pe, c=c, lw=1, label=features[idx])\n",
     "\n",
     "plt.xlabel(r'$-log(\\alpha$)')\n",
     "plt.ylabel('Coefficients')\n",
-    "# plt.title('Elastic Net et Elastic Net positive')\n",
-    "plt.legend((l1[-1], l2[-1]), ('Elastic Net', 'Elastic Net positive'), loc='best')\n",
+    "# plt.title('Elastic Net positive')\n",
+    "plt.legend(fontsize='x-small')\n",
     "plt.axis('tight')\n",
     "save_fig('enet_paths_positive_class')\n",
     "\n",
@@ -2630,10 +2626,6 @@
     "\n",
     "from sklearn.metrics import mean_squared_error, r2_score\n",
     "\n",
-    "from utils import reg_to_class, plot_results\n",
-    "# argument 1 : prédictions en regression ; retourne un vecteur de classes\n",
-    "# arguments 2 : métriques, observations en rég, prédictions en reg\n",
-    "\n",
     "reg_metrics = (mean_squared_error, r2_score)"
    ]
   },
@@ -2967,7 +2959,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On reprend les chemins de régularisation :"
+    "On reprend les chemins de régularisation en régression :"
    ]
   },
   {
@@ -2980,10 +2972,9 @@
    "source": [
     "X_copy = X_train_scaled\n",
     "y_copy = y_train_reg\n",
+    "pale = sns.color_palette(\"husl\", 13)\n",
     "\n",
-    "# Compute paths\n",
-    "\n",
-    "eps = 5e-3  # the smaller it is the longer is the path\n",
+    "eps = 5e-3 # plus c'est petit, plus long sera le chemin de régularisation\n",
     "\n",
     "# Lasso\n",
     "alphas_lasso, coefs_lasso, _ = lasso_path(X_copy, y_copy, eps=eps, fit_intercept=False)\n",
@@ -3000,46 +2991,55 @@
     "alphas_positive_enet, coefs_positive_enet, _ = enet_path(\n",
     "    X_copy, y_copy, eps=eps, l1_ratio=0.8, positive=True, fit_intercept=False)\n",
     "\n",
+    "\n",
     "plt.figure(1)\n",
-    "colors = cycle(['b', 'r', 'g', 'c', 'k'])\n",
     "neg_log_alphas_lasso = -np.log10(alphas_lasso)\n",
-    "neg_log_alphas_enet = -np.log10(alphas_enet)\n",
-    "for coef_l, coef_e, c in zip(coefs_lasso, coefs_enet, colors):\n",
-    "    l1 = plt.plot(neg_log_alphas_lasso, coef_l, c=c, lw=1)\n",
-    "    l2 = plt.plot(neg_log_alphas_enet, coef_e, linestyle='--', c=c, lw=1)\n",
+    "for coef_l, c, idx in zip(coefs_lasso, pale, range(13)):\n",
+    "    plt.plot(neg_log_alphas_lasso, coef_l, c=c, lw=1, label=features[idx])\n",
     "\n",
     "plt.xlabel(r'$-log(\\alpha$)')\n",
     "plt.ylabel('Coefficients')\n",
-    "# plt.title('Chemins Lasso et Elastic Net')\n",
-    "plt.legend((l1[-1], l2[-1]), ('Lasso', 'Elastic Net'), loc='best')\n",
+    "# plt.title('Chemin Lasso')\n",
+    "plt.legend(fontsize='x-small')\n",
     "plt.axis('tight')\n",
-    "save_fig('lasso_enet_paths_reg')\n",
+    "save_fig('lasso_paths_reg')\n",
     "\n",
     "\n",
     "plt.figure(2)\n",
+    "neg_log_alphas_enet = -np.log10(alphas_enet)\n",
+    "for coef_e, c, idx in zip(coefs_enet, pale, range(13)):\n",
+    "    plt.plot(neg_log_alphas_enet, coef_e, c=c, lw=1, label=features[idx])\n",
+    "    \n",
+    "plt.xlabel(r'$-log(\\alpha$)')\n",
+    "plt.ylabel('Coefficients')\n",
+    "# plt.title('Chemin Elastic Net')\n",
+    "plt.legend(fontsize='x-small')\n",
+    "plt.axis('tight')\n",
+    "save_fig('enet_paths_reg')\n",
+    "\n",
+    "\n",
+    "plt.figure(3)\n",
     "neg_log_alphas_positive_lasso = -np.log10(alphas_positive_lasso)\n",
-    "for coef_l, coef_pl, c in zip(coefs_lasso, coefs_positive_lasso, colors):\n",
-    "    l1 = plt.plot(neg_log_alphas_lasso, coef_l, c=c, lw=1)\n",
-    "    l2 = plt.plot(neg_log_alphas_positive_lasso, coef_pl, linestyle='--', c=c, lw=1)\n",
+    "for coef_pl, c, idx in zip(coefs_positive_lasso, pale, range(13)):\n",
+    "    plt.plot(neg_log_alphas_positive_lasso, coef_pl, c=c, lw=1, label=features[idx])\n",
     "\n",
     "plt.xlabel(r'$-log(\\alpha$)')\n",
     "plt.ylabel('Coefficients')\n",
-    "# plt.title('Lasso et Lasso positive')\n",
-    "plt.legend((l1[-1], l2[-1]), ('Lasso', 'Lasso positive'), loc='best')\n",
+    "# plt.title('Lasso positive')\n",
+    "plt.legend(fontsize='x-small')\n",
     "plt.axis('tight')\n",
     "save_fig('lasso_paths_positive_reg')\n",
     "\n",
     "\n",
-    "plt.figure(3)\n",
+    "plt.figure(4)\n",
     "neg_log_alphas_positive_enet = -np.log10(alphas_positive_enet)\n",
-    "for (coef_e, coef_pe, c) in zip(coefs_enet, coefs_positive_enet, colors):\n",
-    "    l1 = plt.plot(neg_log_alphas_enet, coef_e, c=c, lw=1)\n",
-    "    l2 = plt.plot(neg_log_alphas_positive_enet, coef_pe, linestyle='--', c=c, lw=1)\n",
+    "for coef_pe, c, idx in zip(coefs_positive_enet, pale, range(13)):\n",
+    "    plt.plot(neg_log_alphas_positive_enet, coef_pe, c=c, lw=1, label=features[idx])\n",
     "\n",
     "plt.xlabel(r'$-log(\\alpha$)')\n",
     "plt.ylabel('Coefficients')\n",
-    "# plt.title('Elastic Net et Elastic Net positive')\n",
-    "plt.legend((l1[-1], l2[-1]), ('Elastic Net', 'Elastic Net positive'), loc='best')\n",
+    "# plt.title('Elastic Net positive')\n",
+    "plt.legend(fontsize='x-small')\n",
     "plt.axis('tight')\n",
     "save_fig('enet_paths_positive_reg')\n",
     "\n",
