updated Python figures and changed X to X scaled in R

--- a/rapport_Python.ipynb
+++ b/rapport_Python.ipynb
@@ -678,6 +678,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<u>Remarque</u> : les deux cellules suivantes correspondent au bloc de code précédent ; on l'a divisé pour avoir deux sous-figures."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(7, 6))\n",
+    "ax1_data = short_songs.groupby('duration')['popularity'].mean().to_frame().reset_index()\n",
+    "sns.scatterplot(x='duration', y='popularity', data=ax1_data, color='blue')\n",
+    "plt.ylabel('Popularité moyenne')\n",
+    "plt.xlabel('')\n",
+    "plt.ylim(-5, 97)\n",
+    "save_fig('short_songs_popularity')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "plt.figure(figsize=(6, 6))\n",
+    "ax2_data = long_songs.groupby('duration')['popularity'].mean().to_frame().reset_index()\n",
+    "sns.scatterplot(x='duration', y='popularity', data=ax2_data, color='orange')\n",
+    "plt.yticks([])\n",
+    "plt.ylabel('')\n",
+    "plt.xlabel('')\n",
+    "plt.ylim(-5, 97)\n",
+    "save_fig('long_songs_popularity')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "<b>Energy</b>"
    ]
   },
@@ -824,8 +864,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "plt.figure(figsize=(12, 5))\n",
-    "sns.boxplot(x=\"popularity\", data=spotify_data)\n",
+    "plt.figure(figsize=(8, 4))\n",
+    "bp = sns.boxplot(x=\"popularity\", data=spotify_data)\n",
+    "bp.tick_params(labelsize=12)\n",
+    "bp.set_xlim(-5, 105)\n",
+    "save_fig('boxplot_popularity')\n",
     "plt.show()"
    ]
   },
@@ -919,23 +962,23 @@
     "ax.set_ylabel('Fréquences', fontsize=12)\n",
     "\n",
     "ax.text(s='13\\nOutliers', x=5, y=40, fontdict={'size': 12, 'c': 'darkred'})\n",
-    "ax.text(s='Valeurs sans 0', x=125, y=160,\n",
-    "        fontdict={'size': 12, 'c': 'darkred'})\n",
-    "ax.text(s='Médiane\\ncorrigée\\n114.55', x=116, y=40,\n",
-    "        fontdict={'size': 10, 'c': 'darkgreen', 'weight': 'bold'})\n",
+    "# ax.text(s='Valeurs sans 0', x=125, y=160,\n",
+    "#         fontdict={'size': 12, 'c': 'darkred'})\n",
+    "# ax.text(s='Médiane\\ncorrigée\\n114.55', x=116, y=40,\n",
+    "#         fontdict={'size': 10, 'c': 'darkgreen', 'weight': 'bold'})\n",
     "\n",
-    "ax.axvline(x=114.55, ymin=0, ymax=0.7, color='green',\n",
-    "           linestyle='dashed', linewidth=2)\n",
-    "ax.axvline(x=35.37, ymin=0, ymax=1, color='orange',\n",
-    "           linestyle='dashed', linewidth=3)\n",
-    "ax.axvline(x=214.42, ymin=0, ymax=1, color='orange',\n",
-    "           linestyle='dashed', linewidth=3)\n",
+    "# ax.axvline(x=114.55, ymin=0, ymax=0.7, color='green',\n",
+    "#            linestyle='dashed', linewidth=2)\n",
+    "# ax.axvline(x=35.37, ymin=0, ymax=1, color='orange',\n",
+    "#            linestyle='dashed', linewidth=3)\n",
+    "# ax.axvline(x=214.42, ymin=0, ymax=1, color='orange',\n",
+    "#            linestyle='dashed', linewidth=3)\n",
     "\n",
-    "ax.annotate(\"\", xy=(35.37, 150), xytext=(214.42, 150),\n",
-    "            arrowprops=dict(arrowstyle=\"<->\",\n",
-    "                            color='r',\n",
-    "                            linestyle='dashed',\n",
-    "                            linewidth=2))\n",
+    "# ax.annotate(\"\", xy=(35.37, 150), xytext=(214.42, 150),\n",
+    "#             arrowprops=dict(arrowstyle=\"<->\",\n",
+    "#                             color='r',\n",
+    "#                             linestyle='dashed',\n",
+    "#                             linewidth=2))\n",
     "ax.annotate(\"\", xy=(0, 30), xytext=(0, 50),\n",
     "            arrowprops=dict(arrowstyle=\"->\",\n",
     "                            color='r',\n",
@@ -1154,7 +1197,7 @@
     "x = np.arange(pca.explained_variance_.size)\n",
     "cumsum = np.cumsum(pca.explained_variance_ratio_)\n",
     "var_ratio = pca.explained_variance_ratio_\n",
-    "labels = ['Dim ' + str(i + 1) for i in x]"
+    "labels = ['Dim. ' + str(i + 1) for i in x]"
    ]
   },
   {
@@ -1180,7 +1223,7 @@
     "\n",
     "ax[1].bar(x, cumsum, width=.7)\n",
     "ax[1].plot(x, cumsum)\n",
-    "ax[1].set_ylabel(\"Variance partagée\", fontsize=16)\n",
+    "ax[1].set_ylabel(\"Variance cumulée\", fontsize=16)\n",
     "ax[1].set_xticklabels(labels, fontsize=12)\n",
     "#ax[1].set_title(\"Somme cumulée de la part de la variance\", fontsize=15)\n",
     "\n",
@@ -1193,6 +1236,61 @@
     "fig.text(0.5, -0.03, \"Composantes Principales\", ha='center', fontsize=20)\n",
     "#plt.suptitle(\"Analyse de la variance des composantes principales\", fontsize=22)\n",
     "save_fig(\"explained_var_ratio_and_cumulative\")\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On a encore divisé le bloc de code du dessus en deux."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(9, 6))\n",
+    "ax.bar(x, var_ratio)\n",
+    "ax.plot(var_ratio, color='black', lw=1)\n",
+    "ax.set_ylim(0, 0.35)\n",
+    "ax.set_xticks(x)\n",
+    "ax.set_xticklabels(labels)\n",
+    "ax.set_ylabel('Pourcentage de la variance expliquée', fontsize=13)\n",
+    "ax.tick_params(labelsize=12)\n",
+    "\n",
+    "for p in ax.patches:\n",
+    "    text = str(np.round(p.get_height(), 3) * 100)[:4] + '%'\n",
+    "    ax.annotate(text=text,\n",
+    "                   xy=(p.get_x() + p.get_width() / 2., p.get_height() + 0.01),\n",
+    "                   fontsize=12, ha='center', va='center')\n",
+    "\n",
+    "save_fig('explained_var_ratio')\n",
+    "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(figsize=(9, 6))\n",
+    "ax.bar(x, cumsum, width=.7)\n",
+    "ax.plot(x, cumsum, color='black', lw=1)\n",
+    "ax.set_ylabel(\"Variance cumulée\", fontsize=16)\n",
+    "ax.set_xticks(x)\n",
+    "ax.set_xticklabels(labels)\n",
+    "ax.tick_params(labelsize=12)\n",
+    "\n",
+    "for p in ax.patches:\n",
+    "    text = str(np.round(p.get_height(), 3) * 100)[:4] + '%'\n",
+    "    ax.annotate(text=text, xy=(p.get_x() + p.get_width() / 2., p.get_height() + 0.01),\n",
+    "                fontsize=12, ha='center', va='center')\n",
+    "    \n",
+    "save_fig('cumulated_variance')\n",
     "plt.show()"
    ]
   },
@@ -1964,8 +2062,6 @@
    "outputs": [],
    "source": [
     "from sklearn.linear_model import lasso_path, enet_path\n",
-    "from itertools import cycle\n",
-    "from sklearn.linear_model import lasso_path, enet_path\n",
     "\n",
     "X_copy = X_train_scaled\n",
     "y_copy = y_train_class\n",
@@ -2082,8 +2178,7 @@
    "source": [
     "importances = RFC_Model.best_estimator_.feature_importances_\n",
     "\n",
-    "sns.barplot(x=[x for x in range(len(importances))], y=importances)\n",
-    "plt.xticks(range(len(importances)), range(len(importances)))\n",
+    "sns.barplot(x=[x for x in range(1, n + 1)], y=importances)\n",
     "save_fig('RFC_feature_importance')\n",
     "plt.show()"
    ]
@@ -2169,10 +2264,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "importances = DTC_Model.best_estimator_.feature_importances_\n",
+    "from matplotlib.lines import Line2D\n",
     "\n",
-    "sns.barplot(x=[x for x in range(len(importances))], y=importances)\n",
-    "plt.xticks(range(len(importances)), range(len(importances)))\n",
+    "importances = DTC_Model.best_estimator_.feature_importances_\n",
+    "n = len(importances)\n",
+    "palette = sns.color_palette(\"husl\", n)\n",
+    "custom_lines = [Line2D([0], [0], color=palette[i], lw=6) for i in range(n)]\n",
+    "labels = [str(i) + \": \" + features[i - 1] for i in range(1, n + 1)]\n",
+    "\n",
+    "sns.barplot(x=[x for x in range(1, n + 1)], y=importances)\n",
+    "plt.legend(custom_lines, labels, ncol=2)\n",
     "save_fig('DTC_feature_importance')\n",
     "plt.show()"
    ]
@@ -3186,9 +3287,12 @@
    "outputs": [],
    "source": [
     "importances = DT_Model.best_estimator_.feature_importances_\n",
+    "n = len(importances)\n",
+    "custom_lines = [Line2D([0], [0], color=palette[i], lw=6) for i in range(n)]\n",
+    "labels = [str(i) + \": \" + features[i - 1] for i in range(1, n + 1)]\n",
     "\n",
-    "sns.barplot(x=[x for x in range(len(importances))], y=importances)\n",
-    "plt.xticks(range(len(importances)), range(len(importances)))\n",
+    "sns.barplot(x=[x for x in range(1, n + 1)], y=importances)\n",
+    "plt.legend(custom_lines, labels, ncol=2)\n",
     "save_fig('DTR_feature_importance')\n",
     "plt.show()"
    ]
@@ -3755,6 +3859,13 @@
      "library": "var_list.r",
      "varRefreshCmd": "cat(var_dic_list()) "
     }
+   },
+   "position": {
+    "height": "306.85px",
+    "left": "1774px",
+    "right": "20px",
+    "top": "120px",
+    "width": "350px"
    },
    "types_to_exclude": [
     "module",
