--- a/rapport_Python_AYALA_KO_LALOUE_MELLADO.ipynb
+++ b/rapport_Python_AYALA_KO_LALOUE_MELLADO.ipynb
@@ -881,11 +881,13 @@
     "fig, (ax1, ax2) = plt.subplots(2, 1, sharex=True, figsize=(15, 10))\n",
     "ax1 = sns.histplot(spotify_data['popularity'], ax=ax1, bins=50, label='Popularité >= 0')\n",
     "ax1.set_xlabel('')\n",
+    "ax1.set_ylabel('Fréquence', y=0)\n",
     "\n",
     "ax2 = sns.histplot(spotify_data.loc[spotify_data['popularity'] > 0, 'popularity'],\n",
     "                   ax=ax2, bins=50, label='Popularité > 0')\n",
+    "ax2.set_ylabel('')\n",
     "\n",
-    "plt.suptitle('Haut : Toutes les données\\nBas : Popularité > 0', fontsize=16)\n",
+    "#plt.suptitle('Haut : Toutes les données\\nBas : Popularité > 0', fontsize=16)\n",
     "save_fig('hist_of_popularity')\n",
     "plt.show()"
    ]
@@ -962,23 +964,23 @@
     "ax.set_ylabel('Fréquences', fontsize=12)\n",
     "\n",
     "ax.text(s='13\\nOutliers', x=5, y=40, fontdict={'size': 12, 'c': 'darkred'})\n",
-    "# ax.text(s='Valeurs sans 0', x=125, y=160,\n",
-    "#         fontdict={'size': 12, 'c': 'darkred'})\n",
-    "# ax.text(s='Médiane\\ncorrigée\\n114.55', x=116, y=40,\n",
-    "#         fontdict={'size': 10, 'c': 'darkgreen', 'weight': 'bold'})\n",
+    "ax.text(s='Valeurs sans 0', x=125, y=160,\n",
+    "        fontdict={'size': 12, 'c': 'darkred'})\n",
+    "ax.text(s='Médiane\\ncorrigée\\n114.55', x=116, y=40,\n",
+    "        fontdict={'size': 10, 'c': 'darkgreen', 'weight': 'bold'})\n",
     "\n",
-    "# ax.axvline(x=114.55, ymin=0, ymax=0.7, color='green',\n",
-    "#            linestyle='dashed', linewidth=2)\n",
-    "# ax.axvline(x=35.37, ymin=0, ymax=1, color='orange',\n",
-    "#            linestyle='dashed', linewidth=3)\n",
-    "# ax.axvline(x=214.42, ymin=0, ymax=1, color='orange',\n",
-    "#            linestyle='dashed', linewidth=3)\n",
+    "ax.axvline(x=114.55, ymin=0, ymax=0.7, color='green',\n",
+    "           linestyle='dashed', linewidth=2)\n",
+    "ax.axvline(x=35.37, ymin=0, ymax=1, color='orange',\n",
+    "           linestyle='dashed', linewidth=3)\n",
+    "ax.axvline(x=214.42, ymin=0, ymax=1, color='orange',\n",
+    "           linestyle='dashed', linewidth=3)\n",
     "\n",
-    "# ax.annotate(\"\", xy=(35.37, 150), xytext=(214.42, 150),\n",
-    "#             arrowprops=dict(arrowstyle=\"<->\",\n",
-    "#                             color='r',\n",
-    "#                             linestyle='dashed',\n",
-    "#                             linewidth=2))\n",
+    "ax.annotate(\"\", xy=(35.37, 150), xytext=(214.42, 150),\n",
+    "            arrowprops=dict(arrowstyle=\"<->\",\n",
+    "                            color='r',\n",
+    "                            linestyle='dashed',\n",
+    "                            linewidth=2))\n",
     "ax.annotate(\"\", xy=(0, 30), xytext=(0, 50),\n",
     "            arrowprops=dict(arrowstyle=\"->\",\n",
     "                            color='r',\n",
@@ -1133,11 +1135,11 @@
    },
    "outputs": [],
    "source": [
-    "# for i in ['key', 'mode']:\n",
-    "#     sns.pairplot(spotify_data, hue=i)\n",
-    "#     t = 'pairplot_of_data_by_' + i\n",
-    "#     save_fig(t)\n",
-    "#     plt.show()"
+    "for i in ['key', 'mode']:\n",
+    "    sns.pairplot(spotify_data, hue=i)\n",
+    "    t = 'pairplot_of_data_by_' + i\n",
+    "    save_fig(t)\n",
+    "    plt.show()"
    ]
   },
   {
@@ -1146,10 +1148,10 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# sns.pairplot(spotify_data)\n",
-    "# plt.suptitle(\"Pair plot des données\", fontsize=20, y=1.02)\n",
-    "# save_fig(\"pairplot_of_dataset\")\n",
-    "# plt.show()"
+    "sns.pairplot(spotify_data)\n",
+    "plt.suptitle(\"Pair plot des données\", fontsize=20, y=1.02)\n",
+    "save_fig(\"pairplot_of_dataset\")\n",
+    "plt.show()"
    ]
   },
   {
@@ -2687,8 +2689,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model_performance_accuracy.to_csv('result_tables/classification_scores.csv', sep=',')\n",
-    "print(model_performance_accuracy.to_latex(index=False))"
+    "model_performance_accuracy.to_csv('result_tables/classification_scores.csv', sep=',')"
    ]
   },
   {
@@ -3764,8 +3765,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "compare_table.to_csv('result_tables/comparison_table.csv', sep=',')\n",
-    "print(compare_table.to_latex(index=False))"
+    "compare_table.to_csv('result_tables/comparison_table.csv', sep=',')"
    ]
   },
   {
