--- a/rapport_R_AYALA_KO_LALOUE_MELLADO.ipynb
+++ b/rapport_R_AYALA_KO_LALOUE_MELLADO.ipynb
@@ -1019,8 +1019,8 @@
    },
    "outputs": [],
    "source": [
-    "# options(repr.plot.width = 20, repr.plot.height = 20)\n",
-    "# pairs(~., data = data.quant, col = mode)"
+    "options(repr.plot.width = 20, repr.plot.height = 20)\n",
+    "pairs(~., data = data.quant, col = mode)"
    ]
   },
   {
@@ -1029,8 +1029,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# options(repr.plot.width = 20, repr.plot.height = 20)\n",
-    "# pairs(~., data = data.quant, col = key)"
+    "options(repr.plot.width = 20, repr.plot.height = 20)\n",
+    "pairs(~., data = data.quant, col = key)"
    ]
   },
   {
@@ -1487,6 +1487,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Remarque : les cellules suivantes sembleraient donner une régression logistique sans pénalisation mais nous avons plutôt utilisé la libraire `VGAM`."
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
@@ -1578,7 +1585,7 @@
    },
    "outputs": [],
    "source": [
-    "class.lasso.cv <- cv.glmnet(y = X.train$pop.class, x = x.mat, alpha = 1,\n",
+    "class.lasso.cv <- cv.glmnet(y = X.train.scaled$pop.class, x = x.mat, alpha = 1,\n",
     "                            family = \"multinomial\", type.multinomial = \"grouped\")\n",
     "\n",
     "plot(class.lasso.cv)"
@@ -1679,20 +1686,10 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# heatmap(as.matrix(tab), Colv = NA, Rowv = NA, scale=\"column\",\n",
-    "#         col= colorRampPalette(brewer.pal(8, \"Blues\"))(25))"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "C'est normal d'avoir une plus grande erreur de prévision à cause de la construction de la matrice (on n'avait pas de prévisions de la classe A)."
+    "C'est normal d'avoir une plus grande erreur de prévision à cause de la construction de la matrice (on n'avait pas de prévisions dans la classe A)."
    ]
   },
   {
@@ -2452,7 +2449,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reg.lasso <- glmnet(y = X.train$popularity, x = x.mat, alpha = 1)\n",
+    "reg.lasso <- glmnet(y = X.train.scaled$popularity, x = x.mat, alpha = 1)\n",
     "\n",
     "options(repr.plot.width = 12, repr.plot.height = 10)\n",
     "\n",
@@ -2466,7 +2463,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reg.lasso.cv <- cv.glmnet(y = X.train$popularity, x = x.mat, alpha = 1)\n",
+    "reg.lasso.cv <- cv.glmnet(y = X.train.scaled$popularity, x = x.mat, alpha = 1)\n",
     "\n",
     "plot(reg.lasso.cv)"
    ]
@@ -2491,7 +2488,7 @@
    "outputs": [],
    "source": [
     "fit.lasso <- predict(reg.lasso.cv, s = \"lambda.min\", newx = x.mat)\n",
-    "res.lasso <- X.train$popularity - fit.lasso\n",
+    "res.lasso <- X.train.scaled$popularity - fit.lasso\n",
     "\n",
     "# Graphe des résidus\n",
     "options(repr.plot.width = 16, repr.plot.height = 9)\n",
@@ -2550,7 +2547,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reg.ridge.cv <- cv.glmnet(y = X.train$popularity, x = x.mat, alpha = 0)\n",
+    "reg.ridge.cv <- cv.glmnet(y = X.train.scaled$popularity, x = x.mat, alpha = 0)\n",
     "\n",
     "plot(reg.ridge.cv)"
    ]
@@ -2572,7 +2569,7 @@
    "outputs": [],
    "source": [
     "fit.ridge <- predict(reg.ridge.cv, s = \"lambda.min\", newx = x.mat)\n",
-    "res.ridge <- X.train$popularity - fit.ridge\n",
+    "res.ridge <- X.train.scaled$popularity - fit.ridge\n",
     "\n",
     "options(repr.plot.width = 16, repr.plot.height = 9)\n",
     "par(mfrow = c(1, 2))\n",
@@ -2630,7 +2627,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "reg.EN.cv <- cv.glmnet(y = X.train$popularity, x = x.mat, alpha=0.5)\n",
+    "reg.EN.cv <- cv.glmnet(y = X.train.scaled$popularity, x = x.mat, alpha=0.5)\n",
     "\n",
     "plot(reg.EN.cv)"
    ]
@@ -2652,7 +2649,7 @@
    "outputs": [],
    "source": [
     "fit.EN <- predict(reg.EN.cv, s = \"lambda.min\", newx = x.mat)\n",
-    "res.EN <- X.train$popularity - fit.EN\n",
+    "res.EN <- X.train.scaled$popularity - fit.EN\n",
     "\n",
     "options(repr.plot.width = 16, repr.plot.height = 9)\n",
     "par(mfrow = c(1, 2))\n",
@@ -2712,7 +2709,7 @@
    "source": [
     "set.seed(1)\n",
     "eps <- 2e-05\n",
-    "bestMtry <- tuneRF(X.train[, -10], X.train$popularity, mtryStart = 2,\n",
+    "bestMtry <- tuneRF(X.train[, -10], X.train.scaled$popularity, mtryStart = 2,\n",
     "                   stepFactor = 1.5, improve = eps, ntree = 500, plot = TRUE)\n",
     "\n",
     "bestMtry"
@@ -2724,8 +2721,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "rf.reg <- randomForest(popularity ~ ., data = X.train, mtry = 9,\n",
-    "                       xtest = X.test[, -10], ytest = X.test$popularity,\n",
+    "rf.reg <- randomForest(popularity ~ ., data = X.train.scaled, mtry = 9,\n",
+    "                       xtest = X.test.scaled[, -10], ytest = X.test.scaled$popularity,\n",
     "                       ntree = 500, do.trace = 50, importance = TRUE)"
    ]
   },
@@ -2745,7 +2742,7 @@
    "outputs": [],
    "source": [
     "fit.rfr <- rf.reg$predicted\n",
-    "res.rfr <- fit.rfr - X.train$popularity\n",
+    "res.rfr <- fit.rfr - X.train.scaled$popularity\n",
     "plot.res(fit.rfr, res.rfr)"
    ]
   },
@@ -2802,7 +2799,7 @@
     "    cp = 0.001\n",
     ")\n",
     "\n",
-    "tree.reg <- rpart(popularity ~ ., data = X.train, control = control)\n",
+    "tree.reg <- rpart(popularity ~ ., data = X.train.scaled, control = control)\n",
     "plot(tree.reg)\n",
     "text(tree.reg)"
    ]
@@ -2814,7 +2811,7 @@
    "outputs": [],
    "source": [
     "xmat <- xpred.rpart(tree.reg)\n",
-    "xerr <- (xmat - X.train$popularity)^2\n",
+    "xerr <- (xmat - X.train.scaled$popularity)^2\n",
     "CVerr <- apply(xerr, 2, sum)\n",
     "CVerr  #    CP           erreur\n",
     "\n",
@@ -2877,8 +2874,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "fit.tree <- predict(tree.reg, X.train[, -11])\n",
-    "res.tree <- fit.tree - X.train$popularity\n",
+    "fit.tree <- predict(tree.reg, X.train.scaled[, -11])\n",
+    "res.tree <- fit.tree - X.train.scaled$popularity\n",
     "plot.res(fit.tree, res.tree)"
    ]
   },
@@ -2888,7 +2885,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "pred.reg.tree <- predict(tree.reg, newdata = X.test[, -11])\n",
+    "pred.reg.tree <- predict(tree.reg, newdata = X.test.scaled[, -11])\n",
     "plot.regression.results(y.test.reg, y.test.class, pred.reg.tree)"
    ]
   },
